--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Hello, I'm James</h1>
-            <p>Frontend Developer & Designer</p>
+            <p>Welcome to my portfolio</p>
             <a href="#contact" class="btn">Hire Me</a>
         </div>
     </section>
@@ -54,3 +54,4 @@
 
 </body>
 </html>
+
